# aXeleRate

./: gen_anchors.py  pyproject.toml
axelerate/: infer.py
axelerate/inference/: webcam.py
axelerate/networks/common_utils/: convert.py  fit.py
axelerate/networks/yolo/: frontend.py
axelerate/networks/yolo/backend/: batch_gen.py  network.py
axelerate/networks/yolo/backend/utils/: gen_anchors.py  map_evaluation.py
resources/: aXeleRate_telraam_detector.ipynb
